refactor: correction in the session aggregate